Improved README formatting

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                 <ul>
                     {% for entry in entries %}
                         <li>
-                            <span class="mood-text">{{ entry[0] }}</span>  <!-- entry_text -->
+                            <span class="entry-text">{{ entry[0] }}</span>  <!-- entry_text -->
                             <span class="mood-label">Mood: {{ entry[1] }}</span>  <!-- mood -->
                             <span class="entry-date">{{ entry[2] }}</span>  <!-- created_at -->
                         </li>
